--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,28 @@
+html, body {
+    height: 100%;
+}
+
+button {
+    outline: none;
+}
+
 body {
+    margin: 0;
     font-family: Helvetica;
     background-color: aliceblue;
-    max-width: 600px;
-    margin: auto;
+}
+
+.vertical-container {
+    height: 100%;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.title-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 #gameTitle {
@@ -12,29 +32,60 @@ body {
     text-align: center;
     box-shadow: 5px 5px 5px rgba(60, 50, 115, 0.300);
     border-radius: 5px;
+    width: 500px;
+}
+
+.game-board {
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    justify-content: center;
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto;
-    margin: auto;
-    width: 450px;
-    height: 450px;
+    grid-template-columns: 120px 120px 120px;
+    grid-template-rows: 120px 120px 120px;
 }
 
 .grid-item {
     padding: 10px;
-    width: 140px;
-    height: 140px;
-    background-color: whitesmoke;
-    border: 2px solid black;
-    font-size: 100px;
+}
+
+.v-top, .v-mid {
+    border-bottom: 2px solid rgb(45, 40, 115);
+}
+
+.v-bot, .v-mid {
+    border-top: 2px solid rgb(45, 40, 115);
+}
+
+.h-left, .h-mid {
+    border-right: 2px solid rgb(45, 40, 115);
+}
+
+.h-right, .h-mid {
+    border-left: 2px solid rgb(45, 40, 115);
+}
+
+#item-2 {
+    border-left: 2px solid rgb(45, 40, 115);
+    border-bottom: ;
 }
 
 img {
-    width: auto;
-    height : auto;
     max-height: 100%;
     max-width: 100%;
-  }
+}
+
+#reset-game {
+    background-color: rgb(45, 40, 115);
+    color: aliceblue;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 10px;
+}
+
+#reset-game:hover {
+    transform: scale(1.05); 
+}
